--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "abhay-adventure",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -10,13 +13,15 @@
   },
   "dependencies": {
     "framer-motion": "^12.4.2",
-    "mongoose": "^8.8.3",
+    "jspdf": "^3.0.4",
+    "mongoose": "^8.15.0",
     "next": "^15.1.7",
     "nodemailer": "^7.0.3",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
